[project]
name = "core"
description = "Yao's Core Python environment"
authors = [
    {name = "Yao-Yuan Mao"},
]
version = "2025.10.09"
requires-python = ">=3.13"
dependencies = [
    "abundancematching>=0.3",
    "artpop>=0.1",
    "astro-datalab>=2",
    "astroplan>=0.10",
    "astropy>=7",
    "astroquery>=0.4",
    "autograd[scipy]>=1.8",
    "bottleneck>=1",
    "colossus>=1",
    "conditionalgmm",
    "corner>=2",
    "easyquery>=0.4",
    "emcee>=3",
    "fast-histogram>=0.14",
    "fast3tree>=0.4",
    "fofcatalogmatching>=0.1",
    "halotools>=0.9",
    "healpy>=1",
    "minimal",
    "myplotstyle",
    "nbconvert>=7",
    "palettable>=3",
    "pillow>=11",
    "pyarrow>=18",
    "pycurl>=7.45",
    "python-snappy>=0.7",
    "saga",
    "scikit-image>=0.24",
    "scikit-learn>=1",
    "sep>=1",
    "statsmodels>=0.14",
    "tables>=3",
    "tqdm>=4",
    "yymao-helpers>=1",
]

[tool.uv.sources]
minimal = { path = "../minimal" }
myplotstyle = { git = "https://github.com/yymao/myplotstyle.git", rev = "main" }
saga = { git = "https://github.com/sagasurvey/saga.git", rev = "master" }
conditionalgmm = { git = "https://github.com/tmcclintock/ConditionalGMM", rev = "main" }

