[project]
name = "minimal"
description = "Yao's Minimal Python environment"
authors = [
    {name = "Yao-Yuan Mao"},
]
version = "2025.04.11"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29",
    "ipython>=9.1",
    "ipywidgets>=8.1",
    "matplotlib>=3.10",
    "numpy>=2.2",
    "pandas>=2.2",
    "requests>=2.32",
    "scipy>=1.15",
]

