[project]
name = "mypy"
version = "2025.11.25"
requires-python = ">=3.13"
dependencies = [
    "core",
    "adstex>=0.6",
    "beautifulsoup4>=4",
    "fuzzyname>=0.2",
    "jupyter-book>=2",
    "jupyterlab>=4",
    "jupyterlab-a11y-checker>=0.2",
    "lxml>=5",
    "sciserver",
    "setuptools>=75",
    "sympy>=1.12",
    "twine>=6",
]

[tool.uv.sources]
core = { path = "../core" }
sciserver = { git = "https://github.com/sciserver/SciScript-Python.git", subdirectory = "py3", rev = "sciserver-v2.2.0" }

