[project]
name = "mypy"
version = "2026.01.12"
requires-python = ">=3.13"
dependencies = [
    "core>=2026",
    "adstex>=0.6",
    "beautifulsoup4>=4",
    "fuzzyname>=0.2",
    "jupyter-book>=2.1",
    "lxml>=6",
    "setuptools>=80",
    "sympy>=1.14",
    "twine>=6",
]

[tool.uv.sources]
core = { path = "../core" }
