[project]
name = "mypy"
version = "2026.01.13"
requires-python = ">=3.13"
dependencies = [
    "core",
    "adstex>=0.6",
    "beautifulsoup4>=4",
    "fuzzyname>=0.2",
    "lxml>=6",
    "setuptools>=80",
    "sympy>=1.14",
    "twine>=6",
]

[tool.uv.sources]
core = { path = "../core", package = false }
